# mrc_examples

./: CMakeLists.txt  README.md  add_mybashrc.sh  mybashrc  package.xml
config/: cora1.rviz  joy_cmdvel.yaml  rabbit_fixed.yaml  rabbit_waypoints.yaml  rabbit_waypoints_marina.yaml  rabbit_waypoints_variablevelocity.yaml
launch/: joydrive_closedloop.launch  marina_1x.launch  marina_1x_fixedrabbit.launch  marina_2x.launch  marina_2x_w_target.launch  rabbit.launch  rabbit_marina.launch  rabbit_variablevelocity.launch  rabbit_w_visual.launch  rviz_cora1.launch  vorc_marina.launch
matlab/: rabbit_callback.m  usv_odom_callback.m  vbap.m  vbap_slsv.m
models/cora_red/: model.config
nodes/: p3d2nav.py  pointstamped2modelstate.py  rabbit.py
scripts/: set_executable.sh
urdf/: cora_3d_lidar.xacro  cora_dynamics_plugin.xacro  cora_imu.xacro  cora_p3d.xacro  cora_red.xacro  corared.urdf.xacro  rabbit.urdf  target.urdf  thrusters.xacro
worlds/: marina.world.xacro  marina.xacro  marina_project.world.xacro  marina_project.xacro
