<?xml version="1.0"?>
<package format="2">
  <name>mrc_examples</name>
  <version>0.0.0</version>
  <description>The mrc_examples package</description>

  <maintainer email="root@todo.todo">root</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>gazebo_dev</depend>
  <depend>xacro</depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
